--- a/package.json
+++ b/package.json
@@ -28,5 +28,13 @@
     "gulp-webp": "^4.0.1",
     "postcss": "^8.3.11",
     "sass": "^1.43.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tackless/3-Column-Preview-Card-Component.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Tackless/3-Column-Preview-Card-Component/issues"
+  },
+  "homepage": "https://github.com/Tackless/3-Column-Preview-Card-Component#readme"
 }
